--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,23 @@
+Changes in version 0.99.2 (2022-09-10)
++ Update vignette according to Bioconductor
++ Added unit tests for functions
++ Update R code following reviewer recommendations
+  o Split function fcs_processing() into two functions, fcs_processing() and fcs_plotting()
+  o Minor change to avoid possible bugs
+
+Changes in version 0.99.1 (2022-08-26)
++ Version bump to fix Bioconductor building error
+
 Changes in version 0.99.0 (2022-08-10)
 + Adapting package for Bioconductor submission
 
 Changes in version 0.99.0 (2022-08-09)
 + Major changes in functions
-  o nomenclature and all documentations were added following R style guidelines
+  o nomenclature and all documentation were added following R style guidelines
   o Processing flow cytometry data and adding to the quality_report() function
 
 Changes in version 0.1.0 (2022-04-15)
-+ Submitted to github
++ Submitted to GitHub
 
 Changes in version 0.0.1 (2020-08-10)
 + Primordial package created with simple functions and bugs
