--- a/inst/rmd/HC_report.Rmd
+++ b/inst/rmd/HC_report.Rmd
@@ -335,8 +335,9 @@ if (is.null(folder_path_fcs)) {
 
 ```{r processing_flow_data, warning=FALSE, include=process_fcs_data, eval=process_fcs_data}
 processed_index <- fcs_processing(folder_path = folder_path_fcs, compensation = compensation, plate_wells = plate_wells, probe1 = probe1, probe2 = probe2, posvalue_probe1 = posvalue_probe1, posvalue_probe2 = posvalue_probe2)
+fcs_plot(processed_index)
 
-processed_index <- processed_index %>%
+processed_index <- processed_index[["processed_fcs"]] %>%
   mutate(file_ID = paste(sample_ID, well_ID, sep = "_"),
          specificity = gsub("\\.", "", specificity)) %>%
   relocate(file_ID) %>%
