--- a/inst/rmd/HC_report.Rmd
+++ b/inst/rmd/HC_report.Rmd
@@ -380,11 +380,13 @@ df_to_fasta(
 ```{r loop_report, echo=FALSE, include=FALSE}
 
 for (i in unique(sf_filtered$ID)) {
-  rmarkdown::render("HC_individualized_report.Rmd", # file 2
+  rmarkdown::render(system.file("rmd/HC_individualized_report.Rmd",
+                                package = "scifer"), # file 2
     output_file=paste(Sys.Date(), "_", i, "_report", ".html", sep = ""),
     output_dir=output_dir
   )
 }
+
 ```
 
 ```{r}
